--- a/style.css
+++ b/style.css
@@ -21,14 +21,48 @@ img {
     justify-content: center;
 }
 
-h1,
-h2 {
+h1 {
     font-weight: bold;
     text-align: center;
 }
 
 .password-display {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: azure;
+    color: black;
+    padding: 1rem;
+    height: 4rem;
+    width: 400px;
+    border-radius: 5rem;
+    word-break: break-all;
+    font-weight: bold;
+    text-align: center;
     font-size: 1.5rem;
+    border: none;
+    position: relative;
+    pointer-events: none;
+    padding-left: 0rem;
+}
+
+#eye-password {
+    position: relative;
+    top: -3.1rem;
+    width: 2rem;
+    margin-left: 1rem;
+    cursor: pointer;
+    left: 10rem;
+}
+
+#eye-text {
+    position: relative;
+    top: -3.1rem;
+    width: 2rem;
+    margin-left: 1rem;
+    cursor: pointer;
+    left: 10rem;
+    display: none;
 }
 
 main {
@@ -67,32 +101,6 @@ label {
     padding: .2rem;
     border: none;
     margin-left: .5rem;
-}
-
-.password-display {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: azure;
-    color: black;
-    padding: 1rem;
-    height: 4rem;
-    width: 400px;
-    border-radius: 5rem;
-    word-break: break-all;
-}
-
-#eye-password {
-    width: 2rem;
-    margin-left: 1rem;
-    cursor: pointer;
-}
-
-#eye-text {
-    width: 2rem;
-    margin-left: 1rem;
-    cursor: pointer;
-    display: none;
 }
 
 .submit {
